concordium-std/tests/derive-deserial-with-state/fail-forward-without-repr.stderr
error: 'repr(..)' attribute must be set on the type when using 'forward' attribute
 --> tests/derive-deserial-with-state/fail-forward-without-repr.rs:5:10
  |
5 | #[derive(DeserialWithState)]
  |          ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `DeserialWithState` (in Nightly builds, run with -Z macro-backtrace for more info)
